src/stylesheets/pages/_index.scss
.home-header {
  // Extends _banner.scss
  .banner {
    .banner-content {
      justify-content: space-evenly;
    }

    .banner-content-unit {
      background-color: change-color($color: #222, $alpha: 0.5);
    }

    .btn {
      height: auto;
      font-size: 1rem;
      padding: 0.6em 1em;
    }
  }

  .simbs-crest {
    max-width: 400px;
    width: 50vmin;
  }
}

.home-sponsors {
  margin-bottom: 5rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100%;
  padding: 2rem 0;

  background-color: $color-contrary;
  color: $color-text-inverted;

  .sponsors-title {
    margin-bottom: 0;
  }

  .sponsors-row {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;

    overflow-x: hidden;
    width: 100%;
  }

  img {
    max-height: 5rem;
    max-width: 8rem;
    margin: 1rem;
  }
}

.cta-cards {
  margin-bottom: 4rem;
}

.home-news {
  margin-bottom: 4rem;

  text-align: center;
}

.home-social {
  display: flex;
  flex-direction: column;
  align-items: center;
}

